FIPS-926/FIPS-2567 :: fix findbugs warnings